--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <p>
         Utwórz różaniec i zaproś znajomych, żeby odmówili go razem z Tobą!
     </p>
-    <form class="mt-3" action="{{ url_for('new_prayer')}}" method="post">
+    <form class="mt-3" action="{{ url_for('views_create_prayer')}}" method="post">
         <div class="form-check m-1">
           <input class="form-check-input" type="checkbox" value="" id="mystery1" name="radosne">
           <label class="form-check-label" for="mystery1">
