--- a/templates/prayer.html
+++ b/templates/prayer.html
@@ -8,11 +8,11 @@
 {% for mystery in data %}
     <div class="m-1">
         {% if mystery['reserved'] %}
-        <a href="{{ mystery['prayer_id'] }}/{{ mystery['id'] }}/reserve" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">
+        <a href="{{ mystery['prayer_endpoint'] }}/{{ mystery['id'] }}/reserve" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">
             {{ mystery['title'] }}
         </a>
         {% else %}
-        <a href="{{ mystery['prayer_id'] }}/{{ mystery['id'] }}/reserve" class="btn btn-secondary btn-lg btn-block" role="button" aria-pressed="true">
+        <a href="{{ mystery['prayer_endpoint'] }}/{{ mystery['id']}}/reserve" class="btn btn-secondary btn-lg btn-block" role="button" aria-pressed="true">
             {{ mystery['title'] }}
         </a>
         {% endif %}
